@@ -1,4 +1,4 @@
-.TH PKGADD 1 %RELEASE% "" "Linux User's Manual"
+.TH PKGADD 8 %RELEASE% "" "System Administration Manual"
 
 .SH NAME
 
