@@ -1,4 +1,4 @@
-.TH PKGINSTALL 1 %RELEASE% "" "Linux User's Manual"
+.TH PKGINSTALL 8 %RELEASE% "" "System Administraion Manual"
 
 .SH NAME
 
