@@ -1,0 +1,114 @@
+.TH PKGRM 8 %RELEASE% "" "System Administration Manual"
+
+.SH NAME
+
+pkgrm \- Remove installed packages from the system.
+
+.SH SYNOPSIS
+
+.BI "pkgrm [ " options " ] " package_list
+
+.SH DESCRIPTION
+
+.B pkgrm
+removes installed packages from the system, in the order given on the command
+line.  If so desired, it also creates a backup of the removed package.
+
+.B pkgrm
+uses the
+.BR install-log "(1) log files to determine which files have to be deleted. 
+It also creates a list of used directories and deletes them if they have
+become empty.
+
+By default,
+.B pkgrm
+asks the user for confirmation prior to removing a package.  It also queries for
+a backup.  If other installed packages depend on the one to remove, another
+confirmation is required.  These prompts can be skipped using the
+.I --force
+parameter.
+
+.SH OPTIONS
+
+All options must precede
+.IR package_list .
+When options conflict or are repeated, the last on the command line is used.
+
+.BR -c ", " --config
+.I config_file
+.RS
+Specify alternative configuration file.
+.RE
+
+.BR -f ", " --force
+.RS
+Non-interactive mode.  The user will not be prompted for confirmation on
+anything.  Packages that other installed packages depend on will be removed
+nonetheless.  NO BACKUP IS PERFORMED UNLESS THE
+.I --backup
+OPTION IS USED AS WELL.
+.RE
+
+.BR -b ", " --backup
+.RS
+Create a backup of the package before removing it.  The backup will be created
+in the directory specified by the
+.I backupdir
+directive in
+.BR prometheus.conf "(5).  Any previous backups will be overwritten.  The
+backup will be a
+.BR bzip2 "(1)-compressed tarball named after the short name of the package
+and the string .bak.tar.bz2 appended, e.g. `bash.bak.tar.bz2'.
+.RE
+
+.BR -h ", " -? ", " --help
+.RS
+Display the help screen.
+.RE
+
+.BR -v ", " --version
+.RS
+Display version information.
+.RE
+
+.B --
+.RS
+Treat all remaining arguments as packages.
+.RE
+
+.SH FILES
+
+.I "%CONFDIR%/%CONFIG%"
+.RS
+The global prometheus configuration file.
+.RE
+
+.SH BUGS
+
+- Although a backup to a tarball will save the package proper,
+.BR prometheus' " state information will be lost, ie. if you restore the"
+backup,
+.BR prometheus " will not know about the package's version.  The"
+.BR install-log "(1) log file will not be restored, either."
+
+- There is no way to restore a backup except to do it by hand.
+
+If you think you have found a bug or encounter any weird behaviour, please
+report it to the address below.
+
+.SH AUTHOR
+
+.RI "-- Oliver Brakmann <" oliverbrakmann@users.berlios.de >
+
+.SH SEE ALSO
+
+.BR bzip2 (1),
+.BR install-log (1),
+.BR pkgadd (8),
+.BR pkgbuild (1),
+.BR pkgcheck (1),
+.BR pkgget (1),
+.BR pkginfo (1),
+.BR pkginstall (8),
+.BR pkgunpack (1),
+.BR prometheus.conf (5)
